# mlzoomcamp

./: .gitignore  pyproject.toml
week1/: homework.ipynb
week2/: homework.ipynb
week3/: homework.ipynb
week4/: homework.ipynb
week5/class_code/: 05-deploy.ipynb  05-test-model.py  Dockerfile  command.md  howto.md
week5/flask_example/: ping.py
week5/homework/: Dockerfile  flask_model.py  homework_answers.md  model.py  pyproject.toml
week6/: homework.ipynb
week6/class_code/: 06-trees.ipynb
