[tool.poetry]
name = "mlzoomcamp"
version = "0.1.0"
description = "this is an env for the mlzoomcamp"
authors = ["jjmov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"


[tool.poetry.group.development.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
