[tool.poetry]
name = "mlzoomcamp"
version = "0.1.0"
description = "this is an env for the mlzoomcamp"
authors = ["jjmov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"


[tool.poetry.group.common.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
xgboost = "^2.0.0"


[tool.poetry.group.deployment.dependencies]
requests = "^2.31.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"
scikit-learn = "^1.3.1"


[tool.poetry.group.aws.dependencies]
awsebcli = "^3.20.10"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
