[tool.poetry]
name = "homework package"
version = "0.1.0"
description = "this is the env for the homework of week 5 of mlzoomcamp"
authors = ["jjmov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.3.1"
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
